force-app/main/default/objects/Tier__c/fields/Commission_in_percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_in_percentage__c</fullName>
    <label>Commission in %</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>