force-app/main/default/objects/Tier__c/fields/Commission_per_order__c.field-meta.xml
<CustomField>
    <fullName>Commission_per_order__c</fullName>
    <label>Commission per order</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>