force-app/main/default/objects/Tier__c/fields/Id_Contract__c.field-meta.xml
<CustomField>
    <fullName>Id_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>