force-app/main/default/objects/Tier__c/fields/Id_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item</label>
    <referenceTo>Opportunity_Line_Item__c</referenceTo>
    <relationshipLabel>Tiers</relationshipLabel>
    <relationshipName>Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>