force-app/main/default/objects/Tier__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>