force-app/main/default/objects/Tier__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <label>Migration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>